Update and rename index.html to mummy.html

--- a/mummy.html
+++ b/mummy.html
@@ -205,8 +205,9 @@ latin-cross {
     </div>
     <div class="mySlides fade">
         <img src="snr.jpg" class="img">
-        <div class="text">Your love ,your care is unopposed, a moment with you is time <br> well spent indeed, I love you mummy
-        <p><i><b>-From MINEYE</b>/i></p>&#9829;</div>
+        <div class="text">Happy 50th Birthday, Mum!
+You’re the heart of our family and the most caring woman I know. <br>Thank you for your endless love here’s to more joy, laughter,<br> good health and beautiful memories. Love you always!
+        <p><i><b>-From MIENYE</b></i></p>&#9829;</div>
     </div>
     <div class="mySlides fade">
         <img src="mama13p.jpg" class="img">
