--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </audio>
         <!-- Content section with heading, paragraph, and button -->
         <div class="content">
-            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday</h1>
-            <p class="calligraphic-text">Happy Plus One</p>
+            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's <p>
+                GOLDEN jUBILEE &#9829;</p> </h1>
+            <p class="calligraphic-text">Happy 50<sup>th</sup> </p>
             <div class="button-container">
                 <a href="index.html">
                     <button class="call-to-action">For the Celebrant</button>
