--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="content">
             <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's <p>
                 GOLDEN jUBILEE &#9829;</p> </h1>
-            <p class="calligraphic-text">Happy 50<sup>th</sup> </p>
+            <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
             <div class="button-container">
                 <a href="index.html">
                     <button class="call-to-action">For the Celebrant</button>
