--- a/mummy.html
+++ b/mummy.html
@@ -216,7 +216,7 @@ You’re the heart of our family and the most caring woman I know. <br>Thank you
     </div>
     <div class="mySlides fade">
         <img src="mama12p.jpg" class="img">
-        <div class="text">Wishing you many more years. Years filled with joy, good health, God's love, and  all your heart desires.<br> I love and appreciate you
+        <div class="text"> Happy birthday to you, Mummy.Wishing you many more years. Years filled with joy, good health, God's love, and  all your heart desires.<br> I love and appreciate you
         <p><i><b>-FROM ABOMS</b></i>&#9829;</p></div>
     </div>
     <div class="mySlides fade">
@@ -226,7 +226,7 @@ You’re the heart of our family and the most caring woman I know. <br>Thank you
     </div>
     <div class="mySlides fade">
         <img src="mama.jpg" class="img">
-        <div class="text"> I pray the Lord blesses you for all the things you've done for us , the sacrifices , the desire for our growth as a family,<br> You will never be put to shame in Jesus name, Amen
+        <div class="text"> Bon anniversaire ma mere,&9829; I pray the Lord blesses you for all the things you've done for us , the sacrifices , the desire for our growth as a family,<br> You will never be put to shame in Jesus name, Amen
         <p><i><b>- Mama the"Last born"</b></i></p> &#9829;</div>
     </div>
    
