--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </html>
 </head>
 <body>
-    <div class="video-background-container">
+    <div class="background-container">
         <!-- Background image -->
         <img src="mama8p.jpg" alt="Birthday Background Image">
 
@@ -37,7 +37,7 @@
             Your browser does not support the audio element.
         </audio>
         <!-- Content section with heading, paragraph, and button -->
-        <div class="content">
+        <div class="text-content">
             <h1>Celebrating The one and only Indomitobitable Mummy's <p>
                 GOLDEN jUBILEE &#9829;</p> </h1>
             <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
