--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .background-container {
             position: relative;
             width: 100%;
-            height: 300px;
+            height: 100%;
             background-color: #f0f0f0;
             overflow: hidden;
         }
