--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday</title>
     <link rel="stylesheet" href="mum.css">
-      <style>
-        .background-container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        .text-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            text-align: center;
-        }
-    </style>
-</html>
 </head>
 <body>
-    <div class="background-container">
+    <div class="video-background-container">
         <!-- Background image -->
         <img src="mama8p.jpg" alt="Birthday Background Image">
 
@@ -36,9 +17,8 @@
             Your browser does not support the audio element.
         </audio>
         <!-- Content section with heading, paragraph, and button -->
-        <div class="text-content">
-            <h1>Celebrating The one and only Indomitobitable Mummy's <p>
-                GOLDEN jUBILEE &#9829;</p> </h1>
+        <div class="content">
+            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday</h1>
             <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
             <div class="button-container">
                 <a href="index.html">
