--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </audio>
         <!-- Content section with heading, paragraph, and button -->
         <div class="content">
-            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday</h1>
+            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday
+            <p>  GOLDEN jUBILEE &#9829;</p></h1>
             <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
             <div class="button-container">
                 <a href="index.html">
