--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>  GOLDEN jUBILEE &#9829;</p></h1>
             <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
             <div class="button-container">
-                <a href="index.html">
+                <a href="mummy.html">
                     <button class="call-to-action">For the Celebrant</button>
                 </a>
             </div>
