--- a/mummy.html
+++ b/mummy.html
@@ -226,7 +226,7 @@ You’re the heart of our family and the most caring woman I know. <br>Thank you
     </div>
     <div class="mySlides fade">
         <img src="mama.jpg" class="img">
-        <div class="text"> Bon anniversaire ma mere,&9829; I pray the Lord blesses you for all the things you've done for us , the sacrifices , the desire for our growth as a family,<br> You will never be put to shame in Jesus name, Amen
+        <div class="text"> Bon anniversaire ma mere,&#9829; I pray the Lord blesses you for all the things you've done for us , the sacrifices , the desire for our growth as a family,<br> You will never be put to shame in Jesus name, Amen
         <p><i><b>- Mama the"Last born"</b></i></p> &#9829;</div>
     </div>
    
