--- a/index.html
+++ b/index.html
@@ -18,9 +18,29 @@
         </audio>
         <!-- Content section with heading, paragraph, and button -->
         <div class="content">
-            <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday
-            <p>  GOLDEN JUBILEE &#9829;</p></h1>
-            <h2><p class="calligraphic-text"><b>Happy 50<sup>th</sup> </b></p></h2>
+         <h1>Celebrating The one and only, Unopposed, Indomitobitable Mummy's Birthday 
+         <p>  GOLDEN JUBILEE &#9829;</p></h1> 
+         <h2><p class="calligraphic-text"><b>Happy <span>50</span><sup>th</sup> </b></p></h2
+         
+            <div class="button-container">
+                <a href="mummy.html">
+                    <button class="call-to-action">For the Celebrant</button>
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>a.jpg" alt="Birthday Background Image">
+
+        <!-- Audio player with looping audio -->
+        <audio controls autoplay="1" loop>
+            <source src="hehe.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+        <!-- Content section with heading, paragraph, and button -->
+        <div class="content">
+            <h1>Celebrating Mr. Kehinde's Birthday</h1>
+            <p class="calligraphic-text">Happy Plus One</p>
             <div class="button-container">
                 <a href="mummy.html">
                     <button class="call-to-action">For the Celebrant</button>
